--- a/Persuasion.ipynb
+++ b/Persuasion.ipynb
@@ -1020,7 +1020,7 @@
       "source": [
         "import openai\n",
         "\n",
-        "openai.api_key = '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'\n",
+        "openai.api_key = 'add your own api key\n",
         "\n",
         "\n",
         "def generate_response(prompt):\n",
@@ -1133,7 +1133,7 @@
       "source": [
         "import openai\n",
         "\n",
-        "openai.api_key = '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'\n",
+        "openai.api_key = 'add your own api key'\n",
         "\n",
         "class User:\n",
         "    def __init__(self, name):\n",
@@ -1236,7 +1236,7 @@
         "\n",
         "\n",
         "# Set your OpenAI API key\n",
-        "openai.api_key = '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'\n",
+        "openai.api_key = 'add your own api key'\n",
         "\n",
         "def preprocess(text):\n",
         "    if not text:\n",
@@ -1319,7 +1319,7 @@
         "nltk.download('punkt')\n",
         "nltk.download('wordnet')\n",
         "\n",
-        "openai.api_key = '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'\n",
+        "openai.api_key = 'add your own api key'\n",
         "\n",
         "def preprocess(text):\n",
         "    if not text:\n",
